# kvstore

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
client/src/lib/: app.cpp  app.hpp
contrib/: CMakeLists.txt
proto/: CMakeLists.txt
proto/kvstore/: keyvaluestorage.proto
proto/v1/: keyvalue.proto  keyvaluestorage.proto
server/: CMakeLists.txt
server/src/: hashmap_server.cpp  main.cpp  server.hpp
server/src/lib/: avl_tree.hpp  avl_tree_ut.cpp
